--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ AUTH_API_KEY=
 
 APP_HOST=https://gyvunai.biip.lt
 
+ADMIN_HOST=https://admin.biip.lt
+
 MINIO_ENDPOINT="localhost"
 MINIO_PORT=9050
 MINIO_USESSL=false
