--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "moleculer-db": "^0.8.23",
     "moleculer-decorators": "^1.3.0",
     "moleculer-knex-filters": "github:DadPatch/moleculer-knex-filters",
-    "moleculer-minio": "github:zeckon/moleculer-minio",
+    "moleculer-minio": "github:dadpatch/moleculer-minio",
     "moleculer-plantuml": "github:DadPatch/moleculer-plantuml",
     "moleculer-postgis": "^0.2.7",
     "moleculer-sentry": "^2.0.0",
