--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ APP_HOST=https://gyvunai.biip.lt
 ADMIN_HOST=https://admin.biip.lt
 
 MINIO_ENDPOINT="localhost"
+MINIO_PUBLIC_HOST="localhost"
 MINIO_PORT=9050
 MINIO_USESSL=false
 MINIO_ACCESSKEY="minioadmin"
