--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ioredis": "^5.3.1",
     "knex": "^2.4.2",
     "lodash": "^4.17.21",
+    "lt-codes": "^1.0.3",
     "mime-types": "^2.1.35",
     "minio": "^7.1.1",
     "moleculer": "^0.14.29",
@@ -79,7 +80,8 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "postmark": "^4.0.2",
-    "transform-coordinates": "^1.0.0"
+    "transform-coordinates": "^1.0.0",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0"
